--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "Deutsch-Arabisch Lernkarten mit Tashkeel",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#f0f4ff",
-  "theme_color": "#00b4d8",
+  "background_color": "#faf8f4",
+  "theme_color": "#c8952e",
   "orientation": "portrait",
   "icons": [
     {
