Remove large PDFs from tracking, add GitHub Pages deployment, update app

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dr. Shoaibs Lern-App",
+  "name": "Lern-App",
   "short_name": "Lern-App",
   "description": "Deutsch-Arabisch Lernkarten mit Quran & Gebetszeiten",
   "start_url": "./index.html",
