iPad fullscreen + responsive layout: remove mobile-only mode, add tablet CSS

--- a/app/capacitor.config.json
+++ b/app/capacitor.config.json
@@ -9,8 +9,6 @@
     "ios": {
         "contentInset": "never",
         "backgroundColor": "#c8952e",
-        "preferredContentMode": "mobile",
-        "allowsLinkPreview": false,
-        "scrollEnabled": false
+        "allowsLinkPreview": false
     }
 }
